# incident-triage-copilot

./: .env.example  .gcloudignore  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .cloudrun.env  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: prompts.py  triage_pipeline.py
backend/tests/: test_health.py  test_triage.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: incident-form.tsx  result-cards.tsx
frontend/lib/: api.ts
