[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incident-triage-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for the Incident Triage Copilot demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "google-genai>=1.0,<2.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.11,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
